# bfuck-rs

./: Cargo.toml  README.md
.github/workflows/: python.yml  release.yml  rust.yml  tests.yml
examples/: hello-world.bf  name_in_heart.bf  pun.bf
scripts/: text_2_brainfuck.py
src/: code.rs  compile.rs  error.rs  interpret.rs  io.rs  jit.rs  lib.rs  main.rs  storage.rs  text.rs  transpile.rs
tests/: bf_examples.rs
