[package]
name = "bfuck"
version = "0.1.0"
authors = ["Antonio Mamić <antoniomamic007@gmail.com>"]
edition = "2021"
description = "A simple Brainfuck interpreter and transpiler to Rust"
readme = "README.md"
repository = "https://github.com/DarkLord76865/bfuck-rs"
license = "MIT"
keywords = ["cli", "interpreter", "transpiler"]
categories = ["command-line-interface"]
include = [
    "/.cargo",
    "/src",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3.11", features = ["cargo"]}

[profile.release]
lto = true
