[package]
name = "bfuck"
version = "0.2.0"
authors = ["Antonio Mamić <antoniomamic007@gmail.com>"]
edition = "2021"
description = "A simple Brainfuck interpreter, JIT-compiler and compiler"
readme = "README.md"
repository = "https://github.com/amamic1803/bfuck-rs"
license = "MIT"
keywords = ["cli", "interpreter", "jit", "compiler"]
categories = ["command-line-interface", "compilers"]
include = [
    "/.cargo",
    "/src",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]


[dependencies]
clap = {version = "4.5.1", features = ["cargo"]}
cranelift = "0.105.1"
memmap2 = "0.9.4"
target-lexicon = "0.12.14"


[profile.release]
lto = true
