[package]
name = "bfuck"
version = "0.2.0"
authors = ["Antonio Mamić <antoniomamic007@gmail.com>"]
edition = "2021"
description = "A simple Brainfuck interpreter, JIT-compiler and compiler"
readme = "README.md"
repository = "https://github.com/amamic1803/bfuck-rs"
license = "MIT"
keywords = ["cli", "interpreter", "jit", "compiler"]
categories = ["command-line-interface", "compilers"]
include = [
    "/.cargo",
    "/src",
    "/examples",
    "/tests",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]


[profile.release]
lto = true


[profile.test]
opt-level = 3


[dependencies]
clap = {version = "4.5.4", features = ["cargo"]}
cranelift = "0.106.0"
memmap2 = "0.9.4"
target-lexicon = "0.12.14"


[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
